<resources>
    <string name="app_name">Signal Monitor</string>
</resources>
